--- a/translations/pt-br/01-introducao.Rmd
+++ b/translations/pt-br/01-introducao.Rmd
@@ -72,13 +72,13 @@ Essas crenças irracionais levam a consequências irracionais quando levadas a s
 
 -   Se forçar a ter sexo quer queira ou não.
 
-É o medo de que uma noite solitária será miserável, controlando e lutando contraimpulsos descontrolados. Medo de que a noite anterior a uma prova será uma noite infernal sem pornô. Medo de que nunca seremos capazes de se concentrar, lidar com estresse ou ser confiante sem nossa muleta ou que nossa personalidade e caráter irão mudar.
+É o medo de que uma noite solitária será miserável, em uma luta desgastante contra impulsos descontrolados. Medo de que a noite anterior a uma prova será uma noite infernal sem pornô. Medo de que nunca seremos capazes de se concentrar, lidar com estresse ou ser confiante sem nossa muleta ou que nossa personalidade e caráter irão mudar.
 
 Mas medo acima de tudo, de que ’uma vez viciado, sempre viciado’: que nunca seremos completamente livres, passando o resto das nossas vidas ansiando pelo orgasmo com pornô em tempos inoportunos. Se, como eu, você já tentou todos os métodos convencionais para parar e passou por miséria e tortura com o ’método da força de vontade’, você não só será afetado por esse medo, você será convencido de que nunca conseguirá parar.
 
-Se você está apreensivo, em pânico ou sente que esse não é o momento certo para você parar, eu te garanto que sua apreensão e pânico não é aliviado pela pornografia -- é causado por ela. Você não decidiu cair na armadilha da pornografia, mas como todas as armadilhas, é desenhada para garantir que você permaneça preso. Pergunte-se: quando você viu os primeiros vídeos e fotos pornográficas, você tomou a decisão de voltar e continuar assistindo enquanto durar sua vida? Então quando você vai parar? Amanhã? Ano que vem? Pare de se enganar! A armadilha é feita para te prender pelo resto da vida. Por que você acha que esses outros viciados não param antes que o vício ’acabe’ com a vida deles?
+Se você está apreensivo, em pânico ou sente que esse não é o momento certo para você parar, eu te garanto que sua apreensão e pânico não são aliviados pela pornografia -- são causados por ela. Você não decidiu cair na armadilha da pornografia, mas como todas as armadilhas, ela é desenhada para garantir que você permaneça preso. Pergunte-se: quando você viu os primeiros vídeos e fotos pornográficas, você tomou a decisão de voltar e continuar assistindo enquanto durar sua vida? Então quando você vai parar? Amanhã? Ano que vem? Pare de se enganar! A armadilha é feita para te prender pelo resto da vida. Por que você acha que esses outros viciados não param antes que o vício ’acabe’ com a vida deles?
 
-Eu falei sobre um botão mágico; o Método Fácil funciona justamente como esse botão. Esclarecendo: o Método Fácil não é mágico, mas para mim e outras pessoas que acharam fácil e agradável sair do vício, parece que é!
+Eu falei sobre um botão mágico; o Método Fácil funciona justamente como esse botão. Deixe me deixar isso claro: o Método Fácil não é mágico, mas para mim e outras pessoas que acharam fácil e agradável sair do vício, parece que é!
 
 O aviso é o seguinte:
 É uma situação de galinha e ovo: todo viciado quer se livrar do vício e todo viciado pode achar fácil e agradável sair do vício. É somente o **medo** que previne os usuários de tentarem sair. O maior ganho é se livrar desse medo, mas você não será livre desse vício enquanto não terminar o livro. Pelo contrário, seu medo pode aumentar durante a leitura, o que pode te impedir de terminar de ler. Veja esse comentário de uma mulher.
@@ -99,7 +99,7 @@ Com o Método Fácil há somente duas razões para o fracasso.
 Alguns acharão chato que esse livro é tão dogmático com algumas recomendações, como não tentar diminuir o uso ou usar substitutos. Não nego que há muitos que tiveram sucesso em parar usando essas táticas, mas eles tiveram sucesso *apesar delas* e não por causa delas. Algumas pessoas conseguem fazer amor em pé numa rede, mas não é o modo mais fácil. Os números da senha para abrir o cadeado dessa armadilha estão nesse livro, mas é necessário digitar eles na ordem correta: ir de um capítulo em capítulo, sem pular nenhum deles.
 
 **Falhar em entender**
-Não aceite qualquer coisa como correta, questione não só o que te contam, mas também sua própria visão e o que a sociedade te contou sobre sexo, pornô e vício. Por exemplo, quem acredita ser um hábito, pergunte a si mesmo por que outros hábitos, alguns que são até agradáveis, são fáceis de quebrar enquanto um hábito que traz sensações horríveis custa energia, tempo e virilidade é tão difícil de quebrar. Aqueles que acreditam que apreciam a pornografia, perguntem a si mesmos por que outras coisas que são mais prazerosas você consegue usar ou parar de usar sem problema. Por que você *tem* que se masturbar e assistir pornô, entrando em pânico se não o fizer?
+Não aceite qualquer coisa como correta, questione não só o que te contam, mas também sua própria visão e o que a sociedade te contou sobre sexo, pornô e vício. Por exemplo, quem acredita ser um hábito, pergunte a si mesmo por que outros hábitos, alguns que são até agradáveis, são fáceis de quebrar, enquanto um hábito que traz sensações horríveis, custa energia, tempo e virilidade é tão difícil de quebrar. Aqueles que acreditam que apreciam a pornografia, perguntem a si mesmos por que outras coisas que são mais prazerosas você consegue usar ou parar de usar sem problema. Por que você *tem* que se masturbar e assistir pornô, entrando em pânico se não o fizer?
 
 O Método Fácil te dará o conhecimento de quão fácil e agradável é sair do vício da pornografia. Como muitos outros, uma das minhas grandes conquistas na vida têm sido escapar da armadilha. Não há necessidade de se sentir deprimido, pelo contrário, você está prestes a realizar algo que todo usuário do planeta adoraria obter: **LIBERDADE!**
 
