--- a/translations/pt-br/07-do-que-estou-desistindo.Rmd
+++ b/translations/pt-br/07-do-que-estou-desistindo.Rmd
@@ -4,13 +4,13 @@
 
 Deixe isso claro em sua mente: **A pornografia não preenche um vazio,** ***ela cria um!***
 
-Nossos corpos são os objetos mais sofisticados do planeta. Quer você acredite em design inteligente, seleção natural ou uma combinação de ambos, nossos corpos são milhares de vezes mais eficazes do que o próprio homem! Não somos capazes de criar a menor célula viva ou os milagres da visão, reprodução e vários sistemas interligados presentes em nossos corpos ou cérebros. Se o criador ou processo evolutivo pretendesse que lidássemos com estímulos supranormais, teríamos recebido diferentes sistemas de recompensa. Nossos corpos são fornecidos com dispositivos de alerta que são à prova de falhas, e nós os ignoramos por nossa conta e risco.
+Nossos corpos são os objetos mais sofisticados do planeta. Quer você acredite em design inteligente, seleção natural ou uma combinação de ambos, nossos corpos são milhares de vezes mais eficazes do que o próprio homem! Não somos capazes de criar a menor célula viva ou os milagres da visão, reprodução e vários sistemas interligados presentes em nossos corpos ou cérebros. Se o criador ou processo evolutivo pretendesse que lidássemos com estímulos supranormais, teríamos recebido diferentes sistemas de recompensa. Nossos corpos são providos com dispositivos de alerta que são à prova de falhas, e nós os ignoramos por nossa conta e risco.
 
 ## Não há nada para desistir
 
-Depois de remover o pequeno monstro do seu corpo e a lavagem cerebral (o grande monstro) de sua mente, você não vai querer se masturbar com frequência nem usar pornografia na Internet para isso. Existem muitas coisas conhecidas e desconhecidas quando se trata de vício em pornografia, com muitos na comunidade médica não tendo a compreensão necessária para questionar ou determinar se alguém é viciado em pornografia. Muitos dos sintomas relatados estão erroneamente marcados com outras causas. Não é que os usuários geralmente sejam pessoas estúpidas, é apenas que eles se sentem infelizes sem pornografia. Presos entre a cruz e a espada, abstendo-se e sentindo-se miseráveis porque não podem usar pornografia ou porque se sentem culpados desprezando a si mesmos por causa disso. Quando apresentam sintomas como dor lombar ou disfunção sexual, suas mentes ficam divididas entre aceitar a responsabilidade e simplesmente ignorar. 
+Depois de remover o pequeno monstro do seu corpo e a lavagem cerebral (o grande monstro) de sua mente, você não vai querer se masturbar com frequência nem usar pornografia na Internet para isso. Existem muitas coisas conhecidas e desconhecidas quando se trata de vício em pornografia, com muitos na comunidade médica não tendo a compreensão necessária para questionar ou determinar se alguém é viciado em pornografia. Muitos dos sintomas relatados estão erroneamente marcados com outras causas. Não é que os usuários geralmente sejam pessoas estúpidas, é apenas que eles se sentem infelizes sem pornografia. Presos entre a cruz e a espada, abstendo-se e sentindo-se miseráveis porque não podem usar pornografia ou porque se sentem culpados desprezando a si mesmos por causa disso. Quando apresentam sintomas como dor lombar ou disfunção sexual, suas mentes ficam divididas entre aceitar a responsabilidade ou simplesmente ignorar. 
 
-Outra analogia do fumante: todos nós já vimos fumantes que inventam desculpas para escapar para uma tragada irracional e vemos o verdadeiro vício em ação. Os viciados não fazem isso por diversão, em vez disso, porque se sentem infelizes sem isso.
+Outra analogia com o fumante: todos nós já vimos fumantes que inventam desculpas para escapar para uma tragada irracional e vemos o verdadeiro vício em ação. Os viciados não fazem isso por diversão, em vez disso, porque se sentem infelizes sem isso.
 
 Para muitos, a primeira experiência sexual terminou em orgasmo, então eles adquiriram a crença de que não podem desfrutar do sexo sem um. Para os homens, a pornografia é comercializada como um auxílio ao sexo, às vezes até como uma educação sexual para fomentar confiança durante o ato. Isso é um absurdo. O condicionamento de estímulos supranormais apenas *arruína* a confiança. 
 
@@ -36,7 +36,7 @@ Você se depara com um artigo que discute isso e descobre que não está acontec
 
 Você continuaria usando a pomada? Seria preciso força de vontade para não usar a pomada? Se você não acreditou no artigo, pode haver alguns dias de apreensão, mas quando você percebeu que a ferida estava começando a melhorar, a necessidade ou desejo de usar a pomada desapareceria. Você se sentira miserável? Claro que não! Você teve um problema terrível que você pensou ser incurável, mas agora você encontrou a solução. Mesmo que demorasse um ano para a ferida desaparecer, a cada dia que melhorava, você pensava em como se sentiu maravilhoso. Essa é a mágica de parar de usar pornografia.
 
-A ferida não são as dores no corpo, a ausência de luxúria normal, a excitação diminuindo, a ereção inconsistente, o tempo perdido em imagens bidimensionais, sentimentos de violação de direitos e desprezo pelas pessoas que se relacionaram contigo ou, pior ainda, o desprezo por si próprio. Isso tudo apenas acompanha a ferida. 
+A ferida não são as dores no corpo, a falta de libido, a excitação diminuindo, a ereção inconsistente, o tempo perdido em imagens bidimensionais, sentimentos de violação de direitos e desprezo pelas pessoas que se relacionaram contigo ou, pior ainda, o desprezo por si próprio. Isso tudo apenas acompanha a ferida. 
 
 A ferida nos faz fechar nossas mentes para todas essas coisas. Ela é aquela sensação de pânico que vem de querer uma dose. Não-usuários não sofrem desse sentimento. A pior coisa de que sofremos é o medo, o maior ganho jaz em nos livrarmos desse medo. Ele é causado pela sua primeira sessão, e é fortalecido e prolongado por cada sessão subsequente.
 
