--- a/translations/pt-br/09-saude.Rmd
+++ b/translations/pt-br/09-saude.Rmd
@@ -24,9 +24,9 @@ Considere esta conversa comum com os usuários, geralmente os mais jovens.
 
 Exatamente. Eles realizam esforço para não serem atropelados por um ônibus e as chances de que isso aconteça são de um para um milhão. Ainda assim, o usuário arrisca a quase certeza de ser aleijado por seu vício e se faz de completo ignorante. Tal é o poder da lavagem cerebral: a pornografia na Internet é um lobo em pele de cordeiro. Não é estranho que, se soubéssemos que há a possibilidade de haver uma pequena falha em um avião, nós não subiríamos nele -- embora os riscos sejam de um para um milhão -- mas ainda assim temos mais do que certeza dos males da pornografia e simplesmente escolhemos ignorá-los? O que o usuário ganha com isso? **Absolutamente nada!**
 
-Outro mito comum é a depressão ou irritação. Muitos jovens não estão preocupados com sua saúde porque não sofrem de depressão ou melancolia. A depressão ou o estresse não é a doença, mas um sintoma. Pessoas mais jovens em geral não sentem a irritabilidade ou depressão criada pela pornografia devido à capacidade natural de seus corpos de produzir mais dopamina. À medida que envelhecem ou enfrentam contratempos sérios, seus recursos já esgotados ficam sobrecarregados e eles apresentam sintomas completos. Quando os usuários mais velhos se sentem estressados, deprimidos ou irritados, é porque os mecanismos estão protegendo os seus sistemas nervosos do fluxo excessivo de dopamina pela poda dos receptores. O usuário também desenvolve outras alterações neurológicas que o mantêm na "rotina".
+Outro mito comum é a depressão ou irritação. Muitos jovens não estão preocupados com sua saúde porque não sofrem de depressão ou melancolia. A depressão ou o estresse não é a doença, mas um sintoma. Pessoas mais jovens em geral não sentem a irritabilidade ou depressão criada pela pornografia devido à capacidade natural de seus corpos de produzir mais dopamina. À medida que envelhecem ou enfrentam contratempos sérios, seus recursos já esgotados ficam sobrecarregados e eles apresentam sintomas completos. Quando os usuários mais velhos se sentem estressados, deprimidos ou irritados, é porque os mecanismos naturais estão protegendo os seus sistemas nervosos do fluxo excessivo de dopamina através da poda dos receptores. O usuário também desenvolve outras alterações neurológicas que o mantêm na "rotina".
 
-Pense da seguinte forma: se você tivesse um bom carro e permitisse que ele enferrujasse sem fazer nada a respeito, isso seria muito estúpido. Rapidamente ele se tornaria um monte de ferrugem imóvel, incapaz de transportá-lo para qualquer lugar. Porém, não seria o fim do mundo, pois é apenas uma questão de dinheiro. Mas seu corpo é o veículo que o carrega pela vida. Todos nós dizemos que nossa saúde é nosso maior bem, pergunte a qualquer milionário doente. A maioria de nós pode olhar para trás e ver uma doença ou acidente em nossas vidas que oramos para melhorar. Por ser um usuário de pornografia, você não está apenas deixando a ferrugem entrar e não fazendo nada a respeito, você está destruindo sistematicamente o único veículo que irá te levar por sua vida inteira.
+Pense da seguinte forma: se você tivesse um bom carro e permitisse que ele enferrujasse sem fazer nada a respeito, isso seria muito estúpido. Rapidamente ele se tornaria um monte de ferrugem imóvel, incapaz de te transportar para qualquer lugar. Porém, não seria o fim do mundo, pois é apenas uma questão de dinheiro. Mas seu corpo é o veículo que o carrega pela vida. Todos nós dizemos que nossa saúde é nosso maior bem, pergunte a qualquer milionário doente. A maioria de nós pode olhar para trás e ver uma doença ou acidente em nossas vidas que oramos para melhorar. Ao ser um usuário de pornografia, você não está apenas deixando a ferrugem entrar e não fazendo nada a respeito, você está destruindo sistematicamente o único veículo que irá te levar por sua vida inteira.
 
 Seja sábio. Você não precisa fazer isso, lembre-se, a pornografia não está fazendo *absolutamente nada de bom por você*. Por um momento, tire a cabeça da areia e pergunte a si mesmo: se você soubesse, com certeza, que sua próxima sessão iniciaria um processo que o deixaria totalmente indiferente à pessoa que você ama profundamente, você continuaria usando? Falando para as pessoas que isso acontece, elas certamente não esperavam que fosse acontecer com elas, e o pior não é a doença em si, mas o conhecimento de que foram eles que a causaram. Tente imaginar como as pessoas que abandonaram de vez a pornografia se sentem: para elas a lavagem cerebral acabou. Eles passam o resto de suas vidas pensando: "*Por que eu me enganei por tanto tempo que precisava me masturbar vendo pornografia na internet? Se ao menos eu tivesse a chance de voltar!*"
 
@@ -34,9 +34,9 @@ Pare de se enganar. Você tem essa chance. É uma reação em cadeia: se você s
 
 Volumes e mais volumes de pesquisas já foram escritos sobre os danos que a pornografia na Internet causa à nossa vida sexual e bem-estar mental. O problema é que até decidirem parar eles não querem saber. Fóruns e grupos de mentores são uma perda de tempo porque a pornografia põe uma venda nos olhos dos usuários. Se estes fóruns e grupos forem lidos sem cuidado, a primeira coisa que farão é abrir seu site de pornografia favorito. Os usuários de pornografia tendem a pensar na felicidade, no estresse e nos problemas durante o sexo como um caso de tudo ou nada, como pisar em uma mina terrestre.
 
-Coloque na sua cabeça: o processo já está acontecendo. ***Cada vez que*** você abre seu site pornô, você está provocando uma inundação de dopamina e opioides para trabalhar. Os "tobogãs" neurais (os referidos "tobogãs" formados por DeltaFosB) são lubrificadas e o passeio leva você suavemente pelas próximas etapas. Seu cérebro já cedeu ao script. O sistema nervoso agora está inundado por dopamina e, como é a enésima vez, os receptores de dopamina se fecham e o pequeno monstro usa essa leve queda de prazer em comparação com a última vez para levá-lo ainda mais além da linha vermelha, para vídeos mais chocantes, para liberar mais dopamina. Mais novidade, mais dopamina e o pequeno manda você continuar. Tantas fotos e vídeos em uma única sessão acionam um estímulo supranormal, injetando mais substâncias químicas no cérebro e levando você a continuar.
+Coloque na sua cabeça: o processo já está acontecendo. ***Cada vez que*** você abre seu site pornô, você está provocando uma inundação de dopamina e opioides para trabalhar. Os "tobogãs" neurais (os referidos "tobogãs" formados por DeltaFosB) são lubrificadas e o passeio leva você suavemente pelas próximas etapas. Seu cérebro já cedeu ao script. O sistema nervoso agora está inundado por dopamina e, como é a enésima vez, os receptores de dopamina se fecham e o pequeno monstro usa essa leve queda de prazer em comparação com a última vez para levá-lo ainda mais além da linha vermelha, para vídeos mais chocantes, para liberar mais dopamina. Mais novidade, mais dopamina e o pequeno monstro manda você continuar. Tantas fotos e vídeos em uma única sessão acionam um estímulo supranormal, injetando mais substâncias químicas no cérebro e levando você a continuar.
 
-O tempo todo, seus receptores estão recebendo informações para desligar em resposta à inundação. O orgasmo apenas aumenta esse efeito e leva à abstinência. Você está em negação, pois o monstrinho anseia por sua dose sem dor ou desconforto real. A ameaça de ter disfunção erétil aterroriza muitos, e é por isso que eles a bloqueiam de sua mente e a obscurecem com o medo de parar. Não é que o medo seja maior, mas desistir hoje é imediato. Por que olhar para o lado negativo? Talvez isso não aconteça, até lá o usuário pensa que já vai ter parado mesmo.
+O tempo todo, seus receptores estão recebendo informações para desligar em resposta à inundação. O orgasmo apenas aumenta esse efeito e leva à abstinência. Você está em negação, pois o pequeno monstro anseia por sua dose sem dor ou desconforto real. A ameaça de ter disfunção erétil aterroriza muitos, e é por isso que eles a bloqueiam de sua mente e a obscurecem com o medo de parar. Não é que o medo seja maior, mas desistir hoje é imediato. Por que olhar para o lado negativo? Talvez isso não aconteça, até lá o usuário pensa que já vai ter parado mesmo.
 
 Temos a tendência de pensar na pornografia como um cabo de guerra, de um lado está o medo: "*É prejudicial à saúde, sujo e escravizador.*" Do outro lado, os aspectos positivos: "*É um prazer, um amigo, uma muleta.*" Parece que nunca nos ocorre que este lado também é medo; não é que gostemos de pornografia, é que tendemos a ser infelizes sem ela. Os viciados em heroína, quando privados de heroína passam pela miséria, mas imagine a alegria absoluta quando finalmente têm permissão para enfiar uma agulha em sua veia e acabar com aquele desejo terrível. Tente imaginar como alguém pode realmente acreditar que tem prazer em colocar uma seringa hipodérmica em uma veia. Os não viciados em heroína não sofrem esse sentimento de pânico e a heroína não alivia o sentimento, ela o causa.
 
@@ -52,9 +52,9 @@ Precisamente! Você está sugerindo que a qualidade de vida de um adicto é maio
 
 "***Estou solteiro e não pretendo entrar em um relacionamento no futuro, então por que não?***"
 
-Mesmo se isso fosse verdade, essa é uma razão lógica para brincar com os mecanismos de controle do impulso neurológico? Você pode imaginar que alguém seja estúpido o suficiente para ficar nu sempre que estiver sozinho, independentemente de ter certeza de que não está esperando ninguém? **Isso é o que os usuários de pornografia fazem efetivamente!**
+Mesmo se isso fosse verdade, essa é uma razão lógica para brincar com os mecanismos de controle do impulso neurológico? Você consegue imaginar que alguém seja estúpido o suficiente para ficar nu sempre que estiver sozinho, independentemente de ter certeza de que não está esperando ninguém? **Isso é o que os usuários de pornografia fazem efetivamente!**
 
-Saturar progressivamente nossos circuitos de recompensa com estimulação excessiva e torná-los incapazes de lidar com as tensões normais da vida não ajuda a desfrutar a vida com entusiasmo e vigor. A pornografia e a masturbação substituíram o apetite sexual natural, como uma barra de chocolate substitui a comida de verdade. Nada surpreendentemente, muitos médicos e psicólogos estão agora relacionando vários problemas de saúde mental a causas fisiológicas. A comunidade médica tradicional afirmou que a pornografia nunca foi cientificamente comprovada como a causa direta dos problemas relatados por indivíduos que se confessam, mas admitir uma incapacidade sexual em público é um evento desencadeador tão vergonhoso, então por que alguém faria isso a menos que estivesse realmente preocupado -- tendo encontrado a causa e eliminando-a de suas próprias vidas?
+Saturar progressivamente nossos circuitos de recompensa com estimulação excessiva e torná-los incapazes de lidar com as tensões normais da vida não ajuda a desfrutar a vida com entusiasmo e vigor. A pornografia e a masturbação substituíram o apetite sexual natural, como uma barra de chocolate substitui uma comida de verdade. Nada surpreendentemente, muitos médicos e psicólogos estão agora relacionando vários problemas de saúde mental a causas fisiológicas. A comunidade médica tradicional afirmou que a pornografia nunca foi cientificamente comprovada como a causa direta dos problemas relatados por indivíduos que se confessaram, mas admitir uma incapacidade sexual em público é um evento desencadeador tão vergonhoso, então por que alguém faria isso a menos que estivesse realmente preocupado -- tendo encontrado a causa e eliminando-a de suas próprias vidas?
 
 O Método Fácil irá ajudá-lo a se livrar da pornografia e se tornar um ex-usuário feliz. Nada de pornografia, nem masturbação auxiliada por pornografia ou orgasmos desnecessários. A única ajuda será o toque, o cheiro e o perfume do seu parceiro. Como o pão integral após um apetite bem desenvolvido, você não vai mais querer comer o açúcar processado que é a pornografia na internet. As evidências são tão avassaladoras que não precisam de provas: quando bato no polegar com um martelo, dói. Não precisa ser provado. O estresse da pornografia na internet tem efeitos sobre outros aspectos da vida dos usuários, predispondo muitos a recorrer a drogas como cigarros e álcool para lidar com a situação, em alguns casos até mesmo levando o anfitrião a considerar o suicídio.
 
