--- a/translations/pt-br/11-o-metodo-da-forca-de-vontade.Rmd
+++ b/translations/pt-br/11-o-metodo-da-forca-de-vontade.Rmd
@@ -6,7 +6,7 @@ Entretanto, tudo que você precisa fazer para parar com a pornografia é não as
 
 Nós não decidimos nos tornar usuários. Meramente experimentamos com revistas pornográficas ou páginas da internet e, devido ao fato de elas serem horríveis (isso mesmo, horríveis), nós nos convencemos de que podemos parar quando quisermos. De início, assistimos nossos primeiros vídeos quando queremos e em ocasiões especiais. Antes que possamos perceber, não estamos apenas visitando esses sites regularmente e nos masturbando quando queremos -- estamos nos masturbando para eles diariamente. O pornô se tornou parte de nossas vidas. Garantimos que tenhamos internet aonde quer que formos. Nós então acreditamos que merecemos -- que nos são devidos -- o amor, sexo, orgasmo e as propriedades "desestressantes" do pornô. Não parece nos ocorrer que nem os vídeos, nem as atrizes que nos habituamos a assistir podem mais nos fornecer o mesmo grau de satisfação. Então, nós começamos a lutar contra a "linha vermelha", a evitar o "mau pornô". Na realidade, a masturbação e a pornografia digital nem melhoram nossa vida sexual, nem reduzem o nosso estresse: elas meramente fazem com que os usuários acreditem que eles não podem curtir a vida ou lidar com o estresse sem um orgasmo.
 
-Normalmente leva um longo tempo para percebermos que ficamos viciados nisso, pois sofremos da ilusão de que usuários consomem pornografia porque gostam dela -- e não porque ***precisam*** dela. Quando nós estamos “curtindo” o pornô, algo que não é possível de se fazer a não ser que seja adicionada alguma novidade, choque ou escalonamento de gêneros no processo, operamos sob a ilusão de que podemos parar quando quisermos. Esta é uma armadilha de confiança, “*Eu não curto a pornografia, então posso parar quando eu quiser*”. Só que você nunca parece "querer" parar.
+Normalmente leva um longo tempo para percebermos que ficamos viciados nisso, pois sofremos da ilusão de que usuários consomem pornografia porque gostam dela -- e não porque ***precisam*** dela. Quando nós estamos “curtindo” o pornô, algo que não é possível de se fazer a não ser que seja adicionada alguma novidade, choque ou escalonamento de gêneros no processo, agimos sob a ilusão de que podemos parar quando quisermos. Esta é uma armadilha de confiança, “*Eu não curto a pornografia, então posso parar quando eu quiser*”. Só que você nunca parece "querer" parar.
 
 Até que você realmente tente parar não será capaz de perceber o quão dependente está, que existe um problema. As primeiras tentativas são geralmente cedo -- acionadas por conhecer um parceiro e perceber que ele não é "suficiente" após os encontros iniciais. Outra razão comum é notar efeitos na saúde em seu cotidiano.
 
@@ -34,7 +34,7 @@ Do outro lado da guerra está o pequeno monstro, que ainda não teve sua dose. N
 
 -   "*A vida é muito curta. Uma bomba pode explodir. Eu poderia ser atropelado por um ônibus amanhã. Larguei cedo demais. Hoje em dia tudo vicia.*"
 
--	"*Eu escolhi a hora errada.*"
+- "*Eu escolhi a hora errada.*"
 
 -   "*Eu deveria ter esperado até depois do Natal, depois das minhas provas, depois desse evento estressante da minha vida.*"
 
@@ -64,20 +64,20 @@ Como dito acima, a agonia de que o usuário sofre é mental e causada pela incer
 
 -   "*Como vou lidar com o estresse no futuro?*"
 
-O usuário está esperando que as coisas melhorem, mas enquanto ele ainda está deprimido, o 'harém' está se tornando cada vez mais precioso. Na verdade, algo *está* acontecendo, mas de modo inconsciente. Se ele conseguir sobreviver algumas semanas sem abrir o navegador, o anseio pelo pequeno monstro desaparece. No entanto, como afirmado anteriormente, os sintomas de abstinência da dopamina e dos opioides são tão leves que o usuário nem mesmo percebe. Neste momento, muitos usuários sentem que "largaram" e então dão uma olhada para provar isso para si mesmos, o que os manda de volta para o "tobogã". Tendo fornecido dopamina ao corpo, agora há uma vozinha no fundo de sua mente dizendo "*só mais uma vez*". Na verdade, eles já tinham largado a pornografia, mas acabaram se enganchando novamente.
+O usuário está esperando que as coisas melhorem, mas enquanto ele ainda está deprimido, o 'harém' está se tornando cada vez mais precioso. Na verdade, algo *está* acontecendo, mas de modo inconsciente. Se ele conseguir sobreviver algumas semanas sem abrir o navegador, o anseio pelo pequeno monstro desaparece. No entanto, como afirmado anteriormente, os sintomas de abstinência da dopamina e dos opioides são tão leves que o usuário nem mesmo percebe. Neste momento, muitos usuários sentem que "largaram" e então dão uma olhada para provar isso para si mesmos, o que os manda de volta para o "tobogã". Tendo fornecido dopamina ao corpo, agora há uma vozinha no fundo de sua mente dizendo "*só mais uma vez*". Na verdade, eles já tinham largado a pornografia, mas acabaram sendo fisgados novamente.
 
-Quando criança, você assistia a desenhos animados e, de acordo com a neurociência, formou vias neurais (DeltaFosB) para eles. Se você quisesse desencorajar uma criança de assistir, você estudaria se esses caminhos ainda existiam e questionaria os adultos sobre por que eles não gostam de assistir seus desenhos favoritos de infância. Por um lado, há melhor entretenimento disponível e, por outro, os desenhos animados simplesmente não têm a magia.Com o método da força de vontade, você está apenas negando a pornografia ao usuário que a tanto deseja. Por comparação, com o Método Fácil você está garantindo que o usuário não veja nenhuma espécie de valor na pornografia. Qual é melhor?
+Quando criança, você assistia a desenhos animados e, de acordo com a neurociência, formou vias neurais (DeltaFosB) para eles. Se você quisesse desencorajar uma criança de assistir, você estudaria se esses caminhos ainda existiam e questionaria os adultos sobre por que eles não gostam mais de assistir seus desenhos favoritos de infância. Por um lado, há melhor entretenimento disponível e, por outro, os desenhos animados simplesmente não têm mais a magia. Com o método da força de vontade, você está apenas negando o desenho animado à criança. Porém com o Método Fácil você também está garantindo que ela não veja nenhuma espécie de valor. Qual é melhor?
 
-O usuário normalmente não entrará em outra sessão imediatamente, pensando "*não quero ser fisgado de novo!*". Isso permite que um período seguro de horas, dias ou mesmo semanas, se passe. O ex-usuário pode então dizer: "*bem, eu não fui fisgado, então posso ter outra sessão com segurança.*". Eles caíram na mesma armadilha de quando começaram e se encontram em uma ladeira escorregadia.
+O usuário normalmente não entrará em outra sessão imediatamente, pensando "*não quero ser fisgado de novo!*". Isso permite que um período seguro de horas, dias ou mesmo semanas, se passe. O ex-usuário pode então dizer: "*bem, eu não fui fisgado, então posso ter outra sessão com segurança.*". Eles caíram na mesma armadilha de quando começaram e já se encontram em uma ladeira escorregadia.
 
 Os usuários que conseguem usar o método da força de vontade tendem a considerá-lo demorado e difícil porque o problema principal é a lavagem cerebral. Muito depois de o vício físico ter morrido, o usuário ainda está se sentindo deprimido e miserável. Eventualmente, depois de sobreviver a essa tortura de longo prazo, ele começa a perceber que não vai ceder, para de se lamentar e aceita que a vida continua e que é agradável sem pornografia. Existem significativamente mais fracassos do que sucessos. Alguns que tiveram sucesso passam suas vidas em estados vulneráveis, deixados com uma certa lavagem cerebral, que lhes diz que a pornografia realmente lhes dá um impulso, um estímulo. Isso explica por que muitos usuários que pararam por longos períodos acabam retornando ao vício mais tarde.
 
-Muitos ex-usuários terão as sessões ocasionais como um 'tratamento especial' ou para se convencerem de quão bem podem exercer o autocontrole. Eles fazem exatamente isso -- mas assim que a sessão termina, a dopamina começa a sair e uma vozinha no fundo de suas mentes começa a conduzi-los em direção a outra sessão. Se eles decidirem retornar, ainda parecem estar sob controle, sem choques, escalada ou busca de novidades, então eles dizem - "*Maravilhoso! Embora eu não esteja realmente gostando, não vou ficar viciado. Depois do Natal/desse feriado/desse trauma, eu vou parar.*" Mal sabem eles que os "tobogãs" de seus cérebros estão sendo ainda mais lubrificados.
+Muitos ex-usuários terão as sessões ocasionais como um 'tratamento especial' ou para se convencerem de quão bem podem exercer o autocontrole. Eles fazem exatamente isso -- mas assim que a sessão termina, a dopamina começa a sair e uma vozinha no fundo de suas mentes começa a conduzi-los em direção a outra sessão. Se eles decidirem retornar, ainda parecem estar sob controle, sem choques, escalada ou busca de novidades, então eles dizem - "*Maravilhoso! Embora eu não esteja realmente gostando, não vou ficar viciado. Depois do Natal / desse feriado / desse trauma, eu vou parar.*" Mal sabem eles que os "tobogãs" de seus cérebros estão sendo ainda mais lubrificados.
 
 Tarde demais, eles já foram fisgados! A armadilha da qual eles conseguiram se livrar fez sua vítima novamente.
 
 Como já foi dito, o prazer não está presente. Ele nunca esteve! Se assistíssemos por diversão, ninguém ficaria nos sites de pornografia por mais tempo do que leva para terminar o conteúdo. Independentemente disso, uma maneira melhor de proporcionar prazer a si próprio é a partir das memórias. Presumimos que gostamos de pornografia na Internet apenas porque não podemos acreditar que seríamos estúpidos o suficiente para ficar viciados se não gostássemos. A maioria dos usuários não tem ideia do que são os estímulos supranormais, o caráter de recompensa da novidade e do estímulo ou a busca por choque e, mesmo depois de lerem sobre essas coisas, eles não acreditam que seu uso seja motivado pelo circuito de recompensa do seu cérebro. É por isso que grande parte do vício em pornografia é subconsciente. Se você estivesse ciente das mudanças neurológicas que esse vício provoca e tivesse que justificar isso, tendo que para isso gastar dinheiro no futuro, até mesmo a ilusão de diversão iria embora.
 
-Quando tentamos bloquear nossas mentes para o lado ruim, nós nos sentimos estúpidos. Se tivéssemos que enfrentar isso, seria intolerável! Se você observar um usuário em ação, verá que ele fica feliz apenas quando não está consciente que usa. Uma vez ciente, ele tende a se sentir desconfortável e cheio de culpa. A pornografia alimenta o pequeno monstro, então ao purgá-lo de seu corpo junto com a lavagem cerebral (o grande monstro), você não terá mais necessidade ou desejo de assistir!
+Quando tentamos bloquear nossas mentes para o lado ruim, nos sentimos estúpidos. Se tivéssemos que enfrentar isso, seria intolerável! Se você observar um usuário em ação, verá que ele fica feliz apenas quando não está consciente que usa. Uma vez ciente, ele tende a se sentir desconfortável e cheio de culpa. A pornografia alimenta o pequeno monstro, então ao purgá-lo de seu corpo junto com a lavagem cerebral (o grande monstro), você não terá mais necessidade ou desejo de assistir!
 
 <p class="footnote"><span id="note">¹</span> No original, o autor usa a expressão "tântrico" como sinônimo de "sensorial". Tomamos a liberdade de alterar isto na tradução pois essa atribuição de equivalência pode levar a uma compreensão errônea do que seriam práticas tântricas.</p>
