--- a/translations/pt-br/13-so-uma-olhada.Rmd
+++ b/translations/pt-br/13-so-uma-olhada.Rmd
@@ -14,7 +14,7 @@ Os efeitos posteriores dessa visitinha serão horríveis e o usuário se convenc
 
 Tudo bem, nem sempre podemos ter "algo para fazer" para preencher o vazio. Fazer isso não é realisticamente possível todas as vezes para toda a nossa vida. Podemos planejar para a maioria delas, mas às vezes acontece de não ter nada para preencher o tempo livre. Bons e maus momentos também acontecem, independentemente da pornografia. Mas tenha isso claro em sua mente: a pornografia não é uma alternativa. Ou você está preso em uma vida miserável ou não está. Você não sonharia em tomar cianeto só porque gosta do sabor das amêndoas, então pare de se punir com a tal da "sessão ocasional" e "nada demais". Pergunte a um usuário com problemas, "*se você tivesse a oportunidade de voltar ao momento antes de se viciar, você se tornaria um usuário?*" A resposta é inevitavelmente, "*Você deve estar brincando!*" No entanto, todo usuário tem essa escolha todos os dias de sua vida, por que eles não optam por isso? A resposta é medo. O medo de que eles não possam parar ou que a vida não será a mesma sem a pornografia.
 
-Pare de se enganar! Você consegue fazer isso. Qualquer um consegue. É ridiculamente fácil, mas a fim de torná-lo assim, há certos fundamentos para deixar o processo claro em sua mente:
+Pare de se enganar! Você consegue fazer isso. Qualquer um consegue. É ridiculamente fácil, mas para que seja assim, há certos fundamentos para deixar o processo claro em sua mente:
 
 1.  Não há nada para abandonar, apenas maravilhosos ganhos positivos para alcançar.
 
