--- a/translations/pt-br/14-usuarios-casuais.Rmd
+++ b/translations/pt-br/14-usuarios-casuais.Rmd
@@ -8,10 +8,9 @@ Usuários avançados tendem a invejar o usuário casual. Todos nós conhecemos e
 
 |         *Todos os usuários têm que mentir para si mesmos e para os outros numa tentativa vã de justificar sua estupidez.*
 
+Fanáticos de golfe se gabam de quantas vezes eles jogam e querem jogar, então por que os usuários se gabam de quão pouco se masturbam? Se esse é o verdadeiro critério, então certamente o verdadeiro elogio seria não se masturbar, não é?
 
-Fanáticos de golfe se gabam de quantas vezes eles jogam e querem jogar, então por que os usuários se gabam de quão pouco se masturbam? Se esse é o verdadeiro critério, então certamente o verdadeiro elogio é não se masturbar, não é?
-
-Se alguém lhe dissesse: "*Eu posso ficar toda a semana sem cenoura e isso não me incomoda nem um pouco*", você pensaria que está conversando com um maluco. Se eu gosto de cenouras, por que eu gostaria de passar toda a semana sem elas? Se eu não gosto delas, por que faria essa declaração? Então, quando um usuário faz um comentário sobre sobreviver por uma semana sem uma sessão, eles estão tentando convencer a si mesmos - e a você - de que eles não têm um problema. Mas não haveria necessidade de fazer tal declaração se eles não tivessem um problema. Traduzindo, este comentário seria "*Eu consegui sobreviver uma semana inteira sem pornografia.*" Como todo usuário, esperando que depois disso consigam sobreviver ao resto de suas vidas. Apenas capaz de sobreviver uma semana, você pode imaginar o quão preciosa a sessão deve ter sido depois, tendo se sentido privado por uma semana inteira?
+Se alguém lhe dissesse: "*Eu posso ficar toda a semana sem cenoura e isso não me incomoda nem um pouco*", você pensaria que está conversando com um maluco. Se eu gosto de cenouras, por que eu gostaria de passar toda a semana sem elas? Se eu não gostasse delas, por que faria essa declaração? Então, quando um usuário faz um comentário sobre sobreviver por uma semana sem uma sessão, eles estão tentando convencer a si mesmos - e a você - de que eles não têm um problema. Mas não haveria necessidade de fazer tal declaração se eles não tivessem um problema. Traduzindo, este comentário seria "*Eu consegui sobreviver uma semana inteira sem pornografia.*" Como todo usuário, esperando que depois disso consigam sobreviver ao resto de suas vidas. Se ele foi apenas capaz de sobreviver uma semana, você pode imaginar o quão preciosa a sessão deve ter sido depois, tendo se sentido privado por uma semana inteira?
 
 É por isso que os usuários casuais são efetivamente mais viciados do que os avançados. Não só a ilusão de prazer é maior, mas eles têm menos incentivo para desistir porque gastam menos tempo e, portanto, são menos vulneráveis aos riscos à saúde. Ocasionalmente, eles podem experimentar a disfunção sexual, mas não têm certeza o que causou e, por isso, culpa outros fatores. Lembre-se, o único prazer que um usuário recebe está em aliviar os sintomas de abstinência, como já foi explicado. O prazer é uma ilusão, imagine o pequeno monstro da pornografia como uma coceira quase imperceptível e que desconhecemos a maior parte do tempo.
 
@@ -43,7 +42,7 @@ Dos quais existem duas classificações básicas:
 
 1.  O usuário que caiu na armadilha, mas não percebe. Não inveje esses usuários. Eles estão apenas provando o néctar na boca da planta carnívora e com toda probabilidade em breve serão usuários pesados. Lembre-se: assim como todos os alcoólatras começaram como bebedores casuais, também todos os usuários começam casualmente.
 
-2.  O usuário que era anteriormente um usuário pesado, e então pensa que não conseguem parar. Esses usuários são os mais tristes de todos e eles se enquadram em várias categorias, cada uma exigindo um comentário separado.
+2.  O usuário que era anteriormente um usuário pesado, e então pensa que não consegue parar. Esses usuários são os mais tristes de todos e eles se enquadram em várias categorias, cada uma exigindo um comentário separado.
 
 **O Usuário uma-vez-por-dia**
 
@@ -56,7 +55,8 @@ Eles exigem o direito ao orgasmo todos os dias, mas seu parceiro sexual nem semp
 **O Usuário da Dieta Pornográfica**
 
 Também conhecido como, "*Eu posso parar quando quiser. Eu fiz isso milhares de vezes!*"
-Se eles acham que a dieta ajuda a colocá-los num bom estado de espírito para conhecer potenciais parceiros, por que então eles adotam essa dieta de uma vez em cada quatro dias? Ninguém pode prever o futuro. E se o acaso do encontro ocorrer uma hora após a sessão agendada? Além disso, se a ocasional 'limpeza do encanamento' é realmente tão boa para aliviar a tensão, por que não limpar todos os dias? Tem sido provado que a masturbação não é necessária para manter os órgãos saudáveis e que a pornografia não é necessária. Mesmo que seja esse o caso, nenhum "guru" do PUA que leu sobre o dano neurológico jamais recomendaria assistir a pornografia super estimulante. A verdade é que eles ainda estão viciados. Embora eles se livrem do vício físico, ainda são deixados com o principal problema, que é a lavagem cerebral. Eles estão esperando cada vez que vão parar para sempre, mas logo caem para a mesma armadilha novamente.
+
+Se eles acham que a dieta ajuda a colocá-los num bom estado de espírito para conhecer potenciais parceiros, por que então eles adotam essa dieta de uma vez em cada quatro dias? Ninguém pode prever o futuro. E se o acaso do encontro ocorrer uma hora após a sessão agendada? Além disso, se a ocasional 'limpeza do encanamento' é realmente tão boa para aliviar a tensão, por que não limpar todos os dias? Tem sido provado que a masturbação não é necessária para manter os órgãos saudáveis e que a pornografia não é nada necessária. Mesmo que seja esse o caso, nenhum "guru" do PUA que leu sobre o dano neurológico jamais recomendaria assistir a pornografia super estimulante. A verdade é que eles ainda estão viciados. Embora eles se livrem do vício físico, ainda são deixados com o principal problema, que é a lavagem cerebral. Eles estão esperando cada vez que vão parar para sempre, mas logo caem para a mesma armadilha novamente.
 
 A maioria dos usuários realmente invejam aqueles que vivem parando e voltando. Eles pensam em como esses que fazem dieta são 'sortudos' em serem capazes de controlar o uso. No entanto, o que eles ignoram é que o praticante da dieta não está controlando o uso -- quando eles estão usando, eles na verdade desejam que não estivessem. Eles passam pelo incômodo de parar, então começam a se sentirem privados e caem na armadilha novamente, desejando que não o tivessem feito. Eles recebem o pior dos dois mundos. Os usuários quando se permitem ter uma sessão ou desejam que não terem feito isso, ou agem como se fosse algo que eles conquistaram. É somente quando privados da pornografia que ela se torna preciosa. A síndrome do 'Fruto Proibido' é um dos terríveis dilemas para os usuários. Eles nunca podem ganhar porque estão se lamentando por um mito, uma ilusão. Há apenas uma única maneira que eles podem ganhar: parando de se lamentar e de assistir pornô!
 
@@ -64,47 +64,47 @@ A maioria dos usuários realmente invejam aqueles que vivem parando e voltando. 
 
 Sim, para começar, todo mundo faz isso, mas não é incrível como o nível mediano de choque desses clipes parecem aumentar rapidamente, e antes de notarmos, estamos nos sentindo privados (isto é, nossa tolerância aumenta). A novidade está em falta na pornografia estática, e por isso nós descemos o tobogã do ressentimento e da culpa. A pior coisa que você pode fazer é usar as fotos do seu parceiro (com aprovação, é claro) para a masturbação. Por quê? Porque no processo você está religando o seu cérebro para a busca por variedade induzida pela dopamina. O tobogã da pornografia no seu cérebro é o DeltaFosB aumentando, então você vai se ver com dificuldades quando estiver com o seu parceiro na vida real.
 
-Outra armadilha nesta categoria é a pornografia "amadora" e "caseira". A maioria é de mentira e você sabe disso. Além disso, você também não vai parar no primeiro vídeo que atinge seus olhos, e vai continuar a procurar e procurar. Lembre-se, não é apenas o orgasmo que o cérebro busca, mas a novidade da caça que dá emoção ao tobogã. O conteúdo do vídeo não é a questão, seja amador ou profissional: são as descargas de dopamina no cérebro, causando o aumento de tolerância e saciedade. A pornografia destrói a operação do cérebro normal; a masturbação confunde a comunicação entre o cérebro e os músculos; o orgasmo inunda o cérebro com opioides e facilita o caminho para seguir a próxima vez.
+Outra armadilha nesta categoria é a pornografia "amadora" e "caseira". A maioria é de mentira e você sabe disso. Além disso, você também não vai parar no primeiro vídeo que atinge seus olhos, e vai continuar a procurar e procurar. Lembre-se, não é apenas o orgasmo que o cérebro busca, mas a novidade da caça que dá emoção ao tobogã. O conteúdo do vídeo não é a questão — seja amador ou profissional — são as descargas de dopamina no cérebro, causando o aumento de tolerância e saciedade. A pornografia destrói a operação normal do cérebro; a masturbação confunde a comunicação entre o cérebro e os músculos; o orgasmo inunda o cérebro com opioides e facilita o caminho para seguir a próxima vez.
 
 **O Usuário "que parou, mas dá uma olhadinha de vez em quando"**
 
-De certa forma, os usuários da olhadinha são os mais patéticos de todos. Ou eles passam por suas vidas acreditando que estão sendo privados, ou mais frequentemente, a espiada ocasional se torna duas. Deslizando para baixo na encosta escorregadia, mais cedo ou mais tarde eles caem de volta e se tornam usuários pesados. Eles mais uma vez caíram na velha armadilha.
+De certa forma, os usuários da olhadinha são os mais patéticos de todos. Ou eles passam por suas vidas acreditando que estão sendo privados, ou mais frequentemente, a espiada ocasional se torna duas. Deslizando para baixo na encosta escorregadia, mais cedo ou mais tarde eles caem de volta e se tornam usuários pesados. Eles mais uma vez caíram na mesma armadilha que caíram da primeira vez.
 
-Existem duas outras categorias de usuários casuais. O primeiro é o tipo que, ao se masturbar para imagens ou clipes dos últimos vídeos íntimos de celebridades que saem no noticiário, ou para algo que eles "levavam para casa" de sua visualização "acidental" na escola ou no trabalho. Essas pessoas são realmente apenas não-usuários, mas sentem que estão perdendo algo. Eles querem fazer parte da ação, com a maioria de nós começa dessa forma. Da próxima vez, observe que depois de um tempo a celebridade que você fica imaginando já não está é mais tão excitante. Quanto mais "inatingível" o alvo da sua fantasia, mais frustrante a retirada do orgasmo é.
+Existem duas outras categorias de usuários casuais. O primeiro é o tipo que se masturba para imagens ou clipes dos últimos vídeos íntimos de celebridades que saem no noticiário, ou para algo que eles "levavam para casa" de sua visualização "acidental" na escola ou no trabalho. Essas pessoas são realmente apenas não-usuários, mas sentem que estão perdendo algo. Eles querem fazer parte da ação, com a maioria de nós começa dessa forma. Da próxima vez, observe que depois de um tempo a celebridade que você fica imaginando já não está é mais tão excitante. Quanto mais "inatingível" o alvo da sua fantasia, mais frustrante a retirada do orgasmo é.
 
-A segunda categoria vem ganhando atenção recentemente, e é melhor explicada com uma ilustração:
+A segunda categoria vem ganhando atenção recentemente, e é melhor explicada com um caso que foi compartilhado online:
 
-Uma mulher profissional estava lendo histórias eróticas pornográficas por muitos anos e usava sempre uma vez por noite -- nem mais, nem menos. Aliás, ela era uma senhorita com muita força de vontade. A maioria dos usuários se perguntavam por que ela queria parar em primeiro lugar, e apontavam de bom grado que não havia risco de disfunção erétil ou ejaculação precoce em seu caso. Ela nem sequer usava imagens estáticas, e as histórias que ela lia eram bem mais brandas do que a pornografia digital que a maioria dos usuários utiliza diariamente.
+Uma mulher profissional estava lendo histórias eróticas pornográficas na internet por muitos anos e usava mais ou menos uma vez por noite. Aliás, ela era uma senhorita com muita força de vontade. A maioria dos usuários se perguntaria por que ela queria parar em primeiro lugar, e apontavam de bom grado que não havia risco de disfunção erétil ou ejaculação precoce em seu caso. Ela nem sequer usava imagens estáticas, e as histórias que ela lia eram bem mais brandas do que a pornografia digital que a maioria dos usuários utiliza diariamente.
 
-Eles cometem o erro de assumir que os usuários casuais são mais felizes e que estão mais no controle. Eles podem estar mais no controle, mas certamente não são felizes. No caso da mulher, ela não estava satisfeita com seu parceiro nem com o sexo real, e estava se sentindo muito irritadiça ao responder aos estresses diários. Ela foi incapaz de descobrir o que a estava incomodando. Mesmo se ela se convencesse a não temer seu uso através da racionalização, ela ainda se viu incapaz de desfrutar de relacionamentos reais que invariavelmente envolvem altos e baixos. O centro de recompensa de seu cérebro era incapaz de fazer uso de desestressores normais presentes na vida como resultado de inundações diárias de dopamina. A subsequente regulamentação de seus receptores cerebrais havia tornado melancólica à maioria das circunstâncias. Como a maioria, ela tinha um grande medo do lado negro e do tratamento que as mulheres sofriam na pornografia -- até ter a sua primeira vez. Eventualmente, ela se tornou vítima da lavagem cerebral da sociedade e tentou seu primeiro site. Ao contrário da maioria dos que se tornam usuários comuns - ao ver os clipes sujos de violência, ela resistiu ao tobogã.
+Eles cometem o erro de assumir que os usuários casuais são mais felizes e que estão mais no controle. Eles talvez podem estar mais no controle, mas certamente não são felizes. No caso da mulher, ela não estava satisfeita com seu parceiro nem com o sexo real, e estava se sentindo muito irritadiça ao responder aos estresses diários. Ela foi incapaz de descobrir o que a estava incomodando. Mesmo se ela se convencesse a não temer seu uso através da racionalização, ela ainda se viu incapaz de desfrutar de relacionamentos reais que invariavelmente envolvem altos e baixos. O centro de recompensa de seu cérebro era incapaz de fazer uso de desestressores normais presentes na vida como resultado de inundações diárias de dopamina. A subsequente regulamentação de seus receptores cerebrais havia a tornado melancólica à maioria das circunstâncias. Como a maioria, ela tinha um grande medo do lado sombrio e do tratamento que as mulheres sofriam na pornografia -- até ter a sua primeira vez. Eventualmente, ela se tornou vítima da lavagem cerebral da sociedade e tentou seu primeiro site. Ao contrário da maioria dos que se tornam usuários comuns - ao ver os clipes sujos de violência, ela resistiu ao tobogã.
 
 Tudo o que você ganha em consumir pornografia é saciar o desejo que ela mesma provoca, seja o desejo físico, quase imperceptível, ou a tortura mental que vem de não se permitir a coçar a coceira. A própria pornografia é veneno, e é por isso que você só sofre a ilusão de desfrutá-la após períodos de abstinência. Similarmente à fome ou sede, quanto mais você sofre, maior o prazer quando finalmente aliviado. Ao cometer o erro de acreditar que pornô é apenas um hábito, os usuários pensam: "*se eu puder manter um certo nível, ou usar apenas em ocasiões especiais, meu cérebro e corpo aceitarão. Então, eu posso continuar usando nesse nível ou reduzir conforme desejo.*"
 
-Que isso fique claro em sua mente: o 'hábito' não existe. A pornografia é vício em drogas, com a tendência natural sendo aliviar os sintomas de retirada. Para mantê-lo no nível atual, seria necessário que você exercesse tremendas quantidades de disciplina e força de vontade para o resto da sua vida. Como o centro de recompensa do seu cérebro se torna imune a dopamina e opioides, ele quer sempre mais e mais, não menos e menos.
+Que isso fique claro em sua mente: o 'hábito' não existe. A pornografia é vício em drogas, com a tendência natural sendo aliviar os sintomas de retirada, não suportá-los. Para mantê-lo no nível atual, seria necessário que você exercesse tremendas quantidades de disciplina e força de vontade para o resto da sua vida. Como o centro de recompensa do seu cérebro se torna tolerante a dopamina e opioides, ele quer sempre mais e mais, não menos e menos.
 
-Conforme a pornografia começa a destruir gradualmente seu sistema nervoso, coragem, confiança e controles de impulso, você se torna cada vez mais incapaz de resistir e acaba reduzindo o intervalo entre uma sessão e outra. É por isso que nos primeiros dias, podemos pegar ou largar. Se conseguirmos um sinal de algo mental ou fisicamente, apenas paramos. Quando você assiste apenas uma vez a cada vinte e quatro horas, a pornografia parece ser a coisa mais preciosa da terra, o que faz dela um "fruto proibido". Assim, o usuário pode ficar anos no centro de um cabo de guerra.
+Conforme a pornografia começa a destruir gradualmente seu sistema nervoso, coragem, confiança e controles de impulso, você se torna cada vez mais incapaz de resistir e acaba reduzindo o intervalo entre uma sessão e outra. É por isso que nos primeiros dias, podemos pegar ou largar. Se tivermos um sinal de algo errado mentalmente ou fisicamente, apenas paramos. Não inveje essa mulher — quando você assiste apenas uma vez a cada vinte e quatro horas, a pornografia parece ser a coisa mais preciosa da terra, o que faz dela um "fruto proibido". Por muitos anos ela esteve no centro de um cabo de guerra.
 
-Tome o exemplo da mulher de que falamos: incapaz de parar de usar, mas amedrontada demais para passar a assistir vídeos. Por vinte e três horas e dez minutos de cada um daqueles dias, ela tinha que lutar contra a tentação e a falta de sentimento em relação ao namorado. É necessária uma tremenda força de vontade para fazer o que ela fez, e eventualmente isso a levou às lágrimas. Tais casos são raros, mas olhe para ele logicamente: ou há uma ajuda genuína ou prazer na pornografia... ou não há. Se houver, quem quer esperar uma hora, um dia, ou mesmo uma semana? Por que você deveria ser privado da muleta ou prazer nesse período? Se não há uma muleta ou prazer genuíno, por que se incomodar em fazer uma visita ao seu harém online?
+Embora incapaz de parar de usar, ela estava amedrontada demais para passar a assistir vídeos. Por vinte e três horas e dez minutos de cada um daqueles dias, ela tinha que lutar contra a tentação e a falta de sentimento em relação ao namorado. É necessária uma tremenda força de vontade para fazer o que ela fez, e eventualmente isso a levou às lágrimas. Tais casos são raros, mas olhe para ele logicamente: ou há uma ajuda genuína ou prazer na pornografia... ou não há. Se houver, quem quer esperar uma hora, um dia, ou mesmo uma semana? Por que você deveria ser privado da muleta ou prazer nesse período? Se não há uma muleta ou prazer genuíno, por que se incomodar em fazer uma visita ao seu harém online?
 
 Aqui está outro caso de um homem de uma-vez-a-cada-quatro-dias, descrevendo sua vida da seguinte maneira:
 
-> "*Eu tenho quarenta anos de idade, sofri de disfunção erétil induzida pelo pornô com mulheres reais e até mesmo ao usar pornografia, que é a maior parte do tempo. Já fazia um tempo desde que eu tinha uma ereção completa. Antes da dieta pornô de uma vez em cada quatro dias, eu costumava dormir profundamente durante a noite depois da minha sessão. Agora eu acordo a cada hora da noite e é em tudo que consigo pensar. Mesmo quando estou dormindo, eu sonho com meus clipes favoritos. Nos dias depois da minha sessão agendada, sinto-me bem pra baixo. A dieta consome toda a minha energia. Minha parceira me deixava sozinho porque eu ficava tão mal-humorado e se ela não puder sair por um tempo, ela não vai aturar me ter em casa. Eu saio pra correr na rua, mas minha mente continua obcecada pela pornografia.*
+> *"Eu tenho quarenta anos de idade, sofri de disfunção erétil induzida pelo pornô com mulheres reais e até mesmo ao usar pornografia, que é a maior parte do tempo. Já fazia um tempo desde que eu tinha uma ereção completa. Antes da dieta pornô de uma vez em cada quatro dias, eu costumava dormir profundamente durante a noite depois da minha sessão. Agora eu acordo a cada hora da noite e é em tudo que consigo pensar. Mesmo quando estou dormindo, eu sonho com meus clipes favoritos. Nos dias depois da minha sessão agendada, sinto-me bem pra baixo. A dieta consome toda a minha energia. Minha parceira me deixava sozinho porque eu ficava tão mal-humorado e se ela não puder sair por um tempo, ela não vai aturar me ter em casa. Eu saio pra correr na rua, mas minha mente continua obcecada pela pornografia.*
 
 >
-> *No dia agendado, começo a planejar no início da noite, e fico muito irritado se algo acontecer contra meus planos. Eu saía de conversas e cedia (apenas para me arrepender mais tarde) no trabalho e em casa. Eu não sou um cara argumentativo, mas não quero que nenhuma conversa fique me segurando. Lembro-me de ocasiões quando tinha brigas bobas com minha parceira. Eu esperava dar dez horas da noite e quando a hora chega minhas mãos estão tremendo de forma descontrolada. Eu não começo a ação imediatamente -- como há novos vídeos que foram adicionados -- e 'passeio' pelo site. Minha mente me diz que, já que eu me deixei ficar esfomeado por quatro dias, eu mereço um vídeo "especial", que tem que valer a pena o tempo gasto procurando. Eventualmente eu me contento por um ou dois, mas quero que dure para que eu possa "sobreviver" nos próximos quatro dias, então eu levo mais tempo para terminar o ato.*"
+> *No dia agendado, começo a planejar no início da noite, e fico muito irritado se algo acontecer contra meus planos. Eu saía de conversas e cedia (apenas para me arrepender mais tarde) no trabalho e em casa. Eu não sou um cara argumentativo, mas não quero que nenhuma conversa fique me segurando. Lembro-me de ocasiões quando tinha brigas bobas com minha parceira. Eu esperava dar dez horas da noite e quando a hora chega minhas mãos estão tremendo de forma descontrolada. Eu não começo a ação imediatamente -- como há novos vídeos que foram adicionados -- e 'passeio' pelo site. Minha mente me diz que, já que eu me deixei ficar esfomeado por quatro dias, eu mereço um vídeo ‘especial’, que tem que valer a pena o tempo gasto procurando. Eventualmente eu me contento por um ou dois, mas quero que dure para que eu possa ‘sobreviver’ nos próximos quatro dias, então eu levo mais tempo para terminar o ato."*
 
 Além de seus outros problemas, esse pobre homem não tem ideia de que ele está se tratando com veneno. Primeiro, ele está sofrendo da 'síndrome da fruta proibida' e forçando seu cérebro a dar descargas de dopamina. Comparativamente, seus receptores de dopamina não estão tão reduzidos, mas ele está lubrificando o tobogã, buscando, procurando por novidade, por variedade, choque, ansiedade, para que consiga sobreviver os próximos quatro dias. Você provavelmente imagina esse homem como um imbecil patético, mas ele não é. Como um ex-atleta e ex-sargento da marinha, ele não queria se tornar viciado em nada. No entanto, ao retornar da guerra, ele treinou como técnico de TI no programa de reabilitação dos veteranos.
 
-Ao entrar na força de trabalho civil, ele era um profissional bem pago em um banco, e recebeu um laptop para levar para casa. Foi o ano em que os famosos "vazaram" seus vídeos pornográficos on-line e havia muito burburinho sobre isso. Ele então ficou viciado, passando o resto da vida se arruinando fisicamente e mentalmente. Se ele fosse um animal, a sociedade já o teria sacrificado há muito tempo, dado o seu sofrimento, mas ainda permitimos que jovens adolescentes mentalmente e fisicamente saudáveis se tornem viciados. Você pode pensar que este caso e detalhes são exagerados, mas ele -- apesar de extremo -- está longe de ser único. Há dezenas de milhares de histórias semelhantes. Você pode ter certeza de que nenhum de seus amigos e conhecidos o invejavam por ser um homem que se masturbava uma vez em quatro dias? Se você acha que isso não poderia acontecer com você, **Pare de mentir a si mesmo.**
+Ao entrar na força de trabalho civil, ele era um profissional bem pago em um banco, e recebeu um laptop para levar para casa. Foi o ano em que famosas socialites "vazaram" seus vídeos pornográficos online e havia muito burburinho sobre isso. Ele então ficou viciado, passando o resto da vida se arruinando fisicamente e mentalmente. Se ele fosse um animal, a sociedade já o teria sacrificado há muito tempo, dado o seu sofrimento, mas ainda permitimos que jovens adolescentes mentalmente e fisicamente saudáveis se tornem viciados. Você pode pensar que este caso e detalhes são exagerados, mas ele -- apesar de extremo -- está longe de ser único. Há dezenas de milhares de histórias semelhantes. Você pode ter certeza de que nenhum de seus amigos e conhecidos o invejavam por ser um homem que se masturbava uma vez em quatro dias? Se você acha que isso não poderia acontecer com você, **Pare de mentir a si mesmo.**
 
 **JÁ ESTÁ ACONTECENDO.**
 
 Como todos outros tipos de viciados, usuários de pornografia são mentirosos notórios, inclusive para si mesmos. Eles têm que ser. Os usuários mais casuais saciam muito mais vezes e em muito mais ocasiões do que eles são capazes de admitir. Em muitas conversas com os usuários que usam "apenas duas vezes na semana", poderá se descobrir que eles acabam fazendo mais de três ou quatro vezes naquela semana. Dê uma lida no Reddit, nas comunidades NoFap e em histórias de "Reboot" de usuários casuais nos fóruns, e você verá que eles estão contando dias ou esperando a falha. Você não precisa invejar usuários casuais, você não precisa usar. A vida é infinitamente mais doce sem a pornografia. Veja o seguinte relato:
 
-"*Começou com um simples desafio de não me tocar por um dia, e aí eu percebi que não conseguia. Eu não penso mais em masturbação, isso não passa pela minha mente. Isso é possível, eu prometo a você. As riquezas que aguardam quem é capaz - elas são incríveis.*"
+*”Começou com um simples desafio de não me tocar por um dia e ficar sem usar. Eu não penso mais em masturbação, isso não passa pela minha mente. Isso é possível, eu te prometo. As riquezas que aguardam quem é capaz - elas são incríveis."*
 
 Os adolescentes são geralmente mais difíceis de curar, não porque acham mais difícil parar, mas porque não acreditam que estão viciados ou estão nos estágios iniciais da armadilha. Geralmente sofrendo da ilusão que eles automaticamente parariam antes do segundo estágio.
 
-Pais e responsáveis que detestam a pornografia não devem ter uma falsa sensação de segurança. Todas as crianças detestam os lados escuros da pornografia... antes de se tornarem viciados. Em um ponto, você também. Não se deixe enganar por campanhas que promovem o medo. A armadilha é a mesma que sempre foi. As crianças sabem que a pornografia é um estímulo supranormal, mas também "sabem" que uma "visita" ou "espiada" não vai fazer mal. Em algum momento, eles podem ser influenciados por um parceiro, por um amigo ou colega de trabalho.
+Pais e responsáveis que detestam a pornografia não devem ter uma falsa sensação de segurança. Todas as crianças detestam os lados escuros da pornografia... antes de se tornarem viciados. Em algum momento, você também detestou. Não se deixe enganar por campanhas que promovem o medo. A armadilha é a mesma que sempre foi. As crianças sabem que a pornografia é um estímulo supranormal, mas também "sabem" que uma "visita" ou "espiada" não vai fazer mal. Em algum momento, eles podem ser influenciados por um parceiro, por um amigo ou colega de trabalho.
 
-Por favor, não se torne complacente neste assunto. O fracasso da sociedade em impedir que os adolescentes se tornem viciados em pornografia e outras drogas talvez seja a faceta mais perturbadora desse vício. Os cérebros adolescentes são significativamente mais plásticos, e é necessário educar e protegê-los. Se você não tiver certeza de onde começar, um bom recurso é o livro "Your Brain On Porn" para educar-se na neurociência. Mesmo se você suspeitar que seu adolescente já possa estar viciado, o livro fornece o entendimento necessário para ajudar alguém a escapar. Caso contrário, talvez recomende este livro aqui!
+Por favor, não se torne complacente neste assunto. O fracasso da sociedade em impedir que os adolescentes se tornem viciados em pornografia e outras drogas talvez seja a faceta mais perturbadora desse vício. Os cérebros adolescentes são significativamente mais plásticos, e é necessário educar e protegê-los. Se você não tiver certeza de onde começar, um bom recurso é o livro do site "Your Brain On Porn" para educar-se na neurociência. Mesmo se você suspeitar que seu adolescente já possa estar viciado, o livro fornece o entendimento necessário para ajudar alguém a escapar. De outra forma, recomende este livro aqui!
