--- a/translations/pt-br/02-porque-e-dificil-parar.Rmd
+++ b/translations/pt-br/02-porque-e-dificil-parar.Rmd
@@ -10,28 +10,29 @@ Pergunte ao usuário que defende a pornografia e que não acredita que causa mal
 
 *"DE JEITO NENHUM!"* novamente seria a resposta.
 
-Pornô é um enigma extraordinário. Como dito anteriormente, o problema não é explicar o porquê de ser fácil parar, é explicar por que é difícil. O problema real é explicar o porquê de alguém usar *depois* de tomar conhecimento dos danos neurológicos. Parte do motivo de começarmos é por causa dos milhões que já estão usando, contudo, todos esses queriam nem ter começado e dizem que é como viver a vida na segunda marcha. Não conseguimos acreditar que eles não estão desfrutando. Associamos isso com liberdade ou com se tornar "aprendizes sexuais" e nos esforçamos para nos viciar. Então, passamos o resto de nossas vidas falando para os outros não fazerem isso e tentando nos livrar do "hábito".
+O pornô é um enigma extraordinário. Como dito anteriormente, o problema não é explicar o porquê de ser fácil parar, é explicar por que é difícil. O problema real é explicar o porquê de alguém usar *depois* de tomar conhecimento dos danos neurológicos. Parte do motivo de começarmos é por causa dos milhões que já estão usando, contudo, todos esses queriam nem ter começado e dizem que é como viver a vida na segunda marcha. Não conseguimos acreditar que eles não estão desfrutando. Associamos isso com liberdade ou com se tornar "aprendizes sexuais" e nos esforçamos para nos viciar. Então, passamos o resto de nossas vidas falando para os outros não fazerem isso e tentando nos livrar do "hábito".
 
 Passamos também uma parte significativa do nosso tempo nos sentindo miseráveis e sem esperança. "Educar" a nós mesmos com esse estímulo supernormal nos faz preferir e desejar essas imagens frias, até mesmo quando as quentes e reais estão disponíveis! Por causa da constante ascensão e queda da dopamina causada pela pornografia, nós nos sentenciamos a uma vida de irritabilidade, raiva, estresse, fadiga e disfunção sexual. Usar pornô, com toda a sua falta das melhores partes do sexo e da conexão emocional, termina fazendo com que o usuário se sentindo miserável e culpado.
 
-Na verdade, ler sobre a natureza viciante da pornografia e sua capacidade destrutiva, aqui e em outros sites, faz com que nos sintamos mais nervosos e sem esperança! Que hobby é esse que quando você está fazendo, você deseja não estar, e quando você não está fazendo, você anseia por ele? Os usuários desprezam a si mesmos toda vez que leem sobre hipofrontalidade e dessensibilização, toda vez que usam escondido de sua parceira, toda vez que não conseguem se exercitar depois de uma sessão no dia. Esse usuário, que é um ser humano inteligente e racional, passa os seus dias desprezando a si mesmo! Pior de tudo, o que os usuários ganham por ter que suportar uma vida com essas sombras negras e sinistras em suas mentes? **Absolutamente nada!**
+Na verdade, ler sobre a natureza viciante da pornografia online e sua capacidade destrutiva, aqui e em outros sites, faz com que nos sintamos mais nervosos e sem esperança! Que hobby é esse que quando você está fazendo, você deseja não estar, e quando você não está fazendo, você anseia por ele? Os usuários desprezam a si mesmos toda vez que leem sobre hipofrontalidade e dessensibilização, toda vez que usam escondido de sua parceira, toda vez que não conseguem se exercitar depois de uma sessão no dia. Esse usuário, que é um ser humano inteligente e racional, passa os seus dias desprezando a si mesmo! Pior de tudo, o que os usuários ganham por ter que suportar uma vida com essas sombras negras e sinistras em suas mentes? **Absolutamente nada!**
 
 Você pode estar pensando *"Tudo bem, eu sei disso, mas uma vez que você está viciado nisso é difícil parar."* Mas por que é tão difícil? Alguns dizem que é por causa dos poderosos sintomas de abstinência, mas como você irá aprender, os verdadeiros sintomas de abstinência são tão leves que há viciados que viveram e morreram sem nem terem a noção de que estavam viciados.
 
-Alguns dizem que a pornografia é grátis e consequentemente os seres humanos devem usufruir dessa prosperidade, mas isso não é verdade. Ela é viciante e age como qualquer outra droga. Pergunte a um viciado que jura desfrutar somente de revistas "eróticas", como a Playboy, se eles já passaram da linha da "pornografia perigosa" e se honestamente eles racionalizariam usar, ao invés de não usar nada.
+Alguns dizem que a pornografia é grátis e consequentemente os seres humanos devem usufruir dessa prosperidade, mas isso não é verdade. Ela é viciante e age como qualquer outra droga. Pergunte a um viciado que jura desfrutar somente de revistas "eróticas", como a Playboy, se ele já passou da linha da "pornografia perigosa". Se ele for completamente honesto, confessaria sobre as vezes em que racionalizou cruzar essa linha, em vez de não usar nada.
 
-Prazer não tem nada a ver com isso também: eu gosto de comer lagostas, mas eu nunca cheguei ao ponto de ter que comer lagostas todo dia. Com as outras coisas na vida que desfrutamos, nós sentimos prazer enquanto estamos fazendo, mas não ficamos nos sentindo privados quando não estamos.
+O prazer não tem nada a ver com isso também: eu gosto de comer lagostas, mas eu nunca cheguei ao ponto de ter que comer lagostas todo dia. Com as outras coisas na vida que desfrutamos, nós sentimos prazer enquanto estamos fazendo, mas não ficamos nos sentindo privados quando não estamos.
 
 Alguns dizem:
-*"É educacional!"* Quando vai ser sua graduação?
-*"É satisfação sexual!"* Então por que você faz sozinho ao invés de encontrar uma parceira e guardar para ela?
-*"É um sentimento de libertação!"* Libertação dos estresses da vida real? Pornô não vai remover as raízes do estresse, mas aumentará elas.
+*"É educacional!"* Então como isso te fez crescer como uma pessoa?
+*"É satisfação sexual!"* Então por que isso te isola e te faz sentir fissuras insaciáveis?
+*"É um sentimento de libertação!"* Libertação dos estresses da vida real? Ok, por uma hora, antes que tudo se desmorone em você? E quais estresses isso resolveu? 
+*"Me ajuda a dormir"* Então porque outros dormem tão bem sem fazer isso? Existem muitos métodos cientificamente comprovados para ajudar a dormir que podem realmente te ajudar.
 
 Muitos acreditam que pornografia alivia o tédio, o que também é uma falácia. Tédio é um estado de espírito. O pornô rapidamente habituará você à busca pela novidade, fazendo com que fique mais e mais entediado, até que você finalmente participe dessa caça aos patos bravos para poder encontrar o vídeo perfeito, fazendo você passar cada vez mais tempo na Internet à procura de qualquer coisa que traga a sensação de novidade, emoções fortes e, eventualmente, vídeos chocantes.
 
 Alguns dizem que só fazem isso porque seus amigos e todo mundo que conhecem também fazem. Se for o caso, ore para que seus amigos não comecem a cortar as próprias cabeças para curar uma enxaqueca! A maioria dos usuários que pensam sobre isso chegam à conclusão de que é só um hábito. Isso não é uma explicação aceitável, mas após esgotar todas as explicações racionais e usuais, parece ser a única desculpa sobrando. Infelizmente, é igualmente ilógica. Todo dia de nossas vidas nós mudamos de hábitos, alguns muito prazerosos. Sofremos lavagem cerebral para acreditar que se masturbar vendo pornografia é um hábito e que hábitos são difíceis de quebrar.
 
-Hábitos são mesmo difíceis de quebrar? Motoristas dos Estados Unidos são acostumados a dirigirem do lado direito da pista, mas quando vão para a Europa eles quebram esse hábito sem nenhum problema. É claramente uma falácia que hábitos são difíceis de serem quebrados. Nós criamos e nos desfazemos de hábitos todos os dias de nossas vidas. Então por que achamos tão difícil nos livrarmos de um hábito que faz com que nos sintamos privados quando não estamos fazendo ele, culpados quando fazemos; um hábito que desejamos fortemente quebrar, quando tudo que temos que fazer para de fato quebrá-lo é... *parar de fazer?*
+Hábitos são mesmo difíceis de quebrar? Motoristas dos Estados Unidos são acostumados a dirigirem do lado direito da pista, mas quando vão para a Europa eles quebram esse hábito sem nenhum problema. E quando você consegue um emprego novo você assume uma rotina diferente, então seus hábitos mudam. Pode até levar um tempo para nos acostumarmos às mudanças, mas não é nada como romper com uma batalha que te aflige ao longo da vida como o vício em pornô. Nós criamos e nos desfazemos de hábitos todos os dias de nossas vidas, então por que achamos tão difícil nos livrarmos de um hábito que faz com que nos sintamos privados quando não estamos fazendo ele, culpados quando fazemos; um hábito que desejamos fortemente quebrar, quando tudo que temos que fazer para de fato quebrá-lo é... *parar de fazer?*
 
 A resposta é que pornografia não é um hábito, **é um vício!** É por isso que parece tão difícil ’abandonar’. A maioria dos usuários não entendem que é um vício e acreditam que conseguem algum prazer genuíno ou muleta com a pornografia. Eles acreditam que estão fazendo um sacrifício genuíno quando param de usar.
 
