--- a/translations/pt-br/08-economizando-tempo.Rmd
+++ b/translations/pt-br/08-economizando-tempo.Rmd
@@ -1,6 +1,6 @@
 # Economia de tempo
 
-Normalmente, quando os usuários tentam parar, as principais razões apresentadas são saúde, religião e estigma do parceiro. Parte da lavagem cerebral dessa droga horrível é a pura escravidão que ela promove. O homem lutou muito para abolir a escravidão em muitas partes do mundo -- mas o usuário passa a vida sofrendo uma escravidão autoimposta. Eles não percebem o fato de que, quando se dão permissão para usar pornografia, desejam parar de usá-la. A única vez em que a pornografia se torna preciosa é quando estamos "tentando" reduzir ou nos abster, ou quando a abstinência é imposta.
+Normalmente, quando os usuários tentam parar, as principais razões apresentadas são saúde, religião e estigma do parceiro. Parte da lavagem cerebral dessa droga horrível é a pura escravidão que ela promove. O homem lutou muito para abolir a escravidão em muitas partes do mundo -- mas o usuário passa a vida sofrendo uma escravidão autoimposta. Eles estão alheios ao fato de que, quando se dão permissão para usar pornografia, desejam parar de usá-la. A única vez em que a pornografia se torna preciosa é quando estamos "tentando" reduzir ou nos abster, ou quando a abstinência é imposta.
 
 Não pode ser repetido com frequência suficiente que a lavagem cerebral torna difícil parar a pornografia. Quanto mais nós a dissiparmos antes de começar, mais fácil você achará para atingir seu objetivo. Usuários convictos, que não acreditam que a pornografia tenha qualquer efeito negativo sobre sua saúde (disfunção erétil induzida por pornografia, hipofrontalidade etc.) e que não estão sob um cabo de guerra mental, são geralmente mais jovens ou solteiros com um parceiro sexual ocasional. Assim, o feedback interno é perdido devido à natureza de sua juventude ou é muito raro para ser observado e registrado.
 
@@ -8,9 +8,9 @@ Um argumento melhor para um usuário mais jovem é o tempo gasto, melhor dizer "
 
 "*Oh, eu posso gastar. São apenas x horas por semana e acho que vale a pena. É meu único vício prazeroso.*"
 
-"*Ainda não consigo acreditar que você não está preocupado. Vamos supor que uma média diária de meia hora que inclui a drenagem física das retiradas de dopamina. Você está gastando aproximadamente um dia inteiro de trabalho a cada quinze dias. Tenho certeza de que você concorda que meia hora por dia é uma estimativa muito conservadora. Você já pensou em quanto tempo vai gastar na sua vida? O que você está fazendo nesse tempo? Desenvolvendo relacionamentos reais? Não, sua estrela pornô favorita não tem nenhuma simpatia por você só porque você gastou horas e horas assistindo seus vídeos. Você está desperdiçando tempo! Não só isso, você está usando esse tempo para arruinar sua saúde física, destruindo seus nervos e confiança para sofrer uma vida de escravidão, dor, melancolia e irritabilidade. Certamente isso deve preocupar você, certo?*"
+"*Ainda não consigo acreditar que você não está preocupado. Vamos supor que uma média diária de meia hora que inclui a drenagem física das retiradas de dopamina. Você está gastando aproximadamente um dia inteiro de trabalho a cada quinze dias. Tenho certeza de que você concorda que meia hora por dia é uma estimativa muito conservadora. Você já pensou em quanto tempo vai gastar na sua vida? O que você está fazendo nesse tempo? Desenvolvendo relacionamentos reais? Não, sua estrela pornô favorita não tem nenhuma simpatia por você só porque você gastou horas e horas assistindo seus vídeos. Você está desperdiçando tempo! Não só isso, você está usando esse tempo para arruinar sua saúde física, destruindo seus nervos e confiança para sofrer uma vida de escravidão, dor, melancolia e irritabilidade. Certamente isso deve te preocupar, certo?*"
 
-É evidente a esta altura -- especialmente com usuários mais jovens -- que eles nunca consideraram um vício para a vida toda. Ocasionalmente, eles calculam o tempo que perdem em uma semana e isso é alarmante o suficiente. Muito ocasionalmente, e apenas quando pensam em parar, eles estimam o que gastam em um ano -- o que é assustador --, mas considerar o impacto disso ao longo da vida? É impensável. No entanto, como estamos em uma discussão, o usuário convicto dirá impulsivamente, *"Eu posso gastar, é apenas uma semana"*. 
+É evidente a esta altura -- especialmente com usuários mais jovens -- que eles nunca consideraram isso como sendo um vício para a vida toda. Ocasionalmente, eles calculam o tempo que perdem em uma semana e isso é alarmante o suficiente. Muito ocasionalmente, e apenas quando pensam em parar, eles estimam o que gastam em um ano -- o que é assustador --, mas considerar o impacto disso ao longo da vida? É impensável. No entanto, como estamos em uma discussão, o usuário convicto dirá impulsivamente, *"Eu posso gastar, é apenas uma semana"*. 
 
 Você recusaria uma oferta de emprego que pague seu salário anual atual e lhe dê um mês de folga todos os anos? Qualquer usuário assinaria em um piscar de olhos e se ocuparia em encontrar ofertas de feriados em locais exóticos. Descobrir como passar um mês inteiro sem trabalho seria o maior problema a ser resolvido. Em toda discussão com usuários convictos (e tenha em mente que estes não são como você, não são pessoas que planejam parar), ninguém nunca aceitou essa oferta. Por que não?
 
@@ -22,7 +22,7 @@ Os usuários convictos devem ter em mente que a situação só vai piorar expone
 
 O estranho é que muitas pessoas pagariam um bom dinheiro para frequentar academias e personal trainers para construir músculos e ficarem com corpos esculturais. Muitas em seu desespero imaginário (e real) se voltam para medidas com efeitos colaterais duvidosos e perigosos como tratamento de aumento de testosterona. No entanto, existem muitas pessoas neste grupo que se beneficiariam em interromper uma prática que destrói sistematicamente os sistemas de relaxamento natural do cérebro.
 
-Isso ocorre porque eles ainda estão pensando com a lavagem cerebral de um usuário. Limpe a sujeira dos olhos por um momento: a pornografia na Internet é uma reação em cadeia e uma cadeia para a vida toda, e se você não quebrar essa cadeia, continuará sendo um usuário pelo resto da vida. Faça uma estimativa de quanto tempo você acha que vai gastar com pornografia pelo resto de sua existência. Obviamente a quantidade vai variar de pessoa para pessoa, mas vamos supor que seja um ano e meio de horas de trabalho. Imagine se houvesse um cheque da loteria de um ano e meio do seu salário no tapete amanhã? Você estaria dançando com prazer, então comece a dançar! Você está prestes a começar a receber esses benefícios!
+Isso ocorre porque eles ainda estão pensando com a lavagem cerebral em suas mentes. Limpe a sujeira dos olhos por um momento: a pornografia na Internet é uma reação em cadeia e uma cadeia para a vida toda, e se você não quebrar essa cadeia, continuará sendo um usuário pelo resto da vida. Faça uma estimativa de quanto tempo você acha que vai gastar com pornografia pelo resto de sua existência. Obviamente a quantidade vai variar de pessoa para pessoa, mas vamos supor que seja um ano e meio de horas de trabalho. Imagine se houvesse um cheque da loteria de um ano e meio do seu salário no tapete amanhã? Você estaria dançando de alegria, então comece a dançar! Você está prestes a começar a receber esses benefícios!
 
 Se você acha que esta é uma maneira complicada de ver as coisas, você ainda está se enganando. Calcule quanto tempo você teria economizado se nunca tivesse dado a primeira espiada logo no início.
 
